--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"private": true,
 	"scripts": {
+		"start": "supabase start",
+		"stop": "supabase stop",
 		"build": "nuxt build",
 		"dev": "nuxt dev",
 		"generate": "nuxt generate",
@@ -12,6 +14,7 @@
 		"@playwright/test": "^1.32.1",
 		"@types/detect-port": "^1.3.2",
 		"detect-port": "^1.5.1",
-		"nuxt": "^3.3.1"
+		"nuxt": "^3.3.1",
+		"supabase": "^1.49.4"
 	}
 }
