--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "nuxt dev",
 		"generate": "nuxt generate",
 		"preview": "nuxt preview",
-		"postinstall": "nuxt prepare"
+		"postinstall": "nuxt prepare",
+		"types": "supabase gen types typescript --local > ./database.types.ts"
 	},
 	"devDependencies": {
 		"@nuxtjs/supabase": "^0.3.1",
